force-app/main/default/objects/Photo__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Inspection__c</fullName>
        <inlineHelpText>Link to the Monitoring Report that this photo is related to.</inlineHelpText>
        <label>Annual Inspection</label>
        <referenceTo>Annual_Inspection__c</referenceTo>
        <relationshipLabel>Photos</relationshipLabel>
        <relationshipName>Photos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_URL__c</fullName>
        <formula>IF(Attachment_ID__c!=null,HYPERLINK(&quot;/&quot;&amp;Attachment_ID__c, &quot;View Attachment&quot; , &quot;target=_blank&quot;),&quot;&quot;)</formula>
        <label>Attachment URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Taken_Collector__c</fullName>
        <inlineHelpText>The date that the picture was taken if added to Salesforce via Collector (rather than added manually).</inlineHelpText>
        <label>Date Taken (Collector)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken_Manual__c</fullName>
        <inlineHelpText>The date that the picture was taken (if the picture was added to Salesforce manually rather than via Collector).</inlineHelpText>
        <label>Date Taken (Manual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <formula>IF(ISBLANK(BLANKVALUE(Date_Taken_Manual__c, Date_Taken_Collector__c)),DATEVALUE(CreatedDate), BLANKVALUE(Date_Taken_Manual__c, Date_Taken_Collector__c))</formula>
        <inlineHelpText>Read-only field. Shows the date that the picture was taken, whether it is filled in automatically via collector or manually.</inlineHelpText>
        <label>Date Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe the features in this photo, and any violations depicted.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Editable_File_Name__c</fullName>
        <inlineHelpText>File Name of Photograph.</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Editable_File_Name__c)</formula>
        <inlineHelpText>Name of photo as assigned by photographer. This name is not unique.</inlineHelpText>
        <label>File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>In case the attachment gets deleted, adding in the file name so that we have a record of what file was attached to this photo.</description>
        <inlineHelpText>Original photo file name. Filled in automatically.</inlineHelpText>
        <label>Original File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_truncated__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, LEFT(Editable_File_Name__c, 15)+IF(LEN(Editable_File_Name__c)&gt;15,&quot;...&quot;,&quot;&quot;))</formula>
        <inlineHelpText>Truncated name of file for search results</inlineHelpText>
        <label>File Name (truncated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <formula>Right(File_Name__c,LEN(File_Name__c)-FIND(&quot;.&quot;,File_Name__c))</formula>
        <inlineHelpText>Read-only field. Automatically fills in with the file type based on the file name.</inlineHelpText>
        <label>File Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Used for inserting photos from Collector.</inlineHelpText>
        <label>Global ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Photo_Taken__c</fullName>
        <inlineHelpText>Location and direction that the photo was taken in.</inlineHelpText>
        <label>Location Photo Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Report__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Annual_Inspection__c, Annual_Inspection__r.Report_Name__c)</formula>
        <inlineHelpText>Click here to go back to the monitoring report that this photo is related to.</inlineHelpText>
        <label>Monitoring Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Year__c</fullName>
        <formula>TEXT(YEAR(Annual_Inspection__r.Inspection_Date__c))</formula>
        <inlineHelpText>Automatically fills in with the year from the annual inspection record. If the year shown here is incorrect, please check to make sure that the annual inspection record is correct.</inlineHelpText>
        <label>Monitoring Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Photos__c</fullName>
        <formula>$User.Id = Property_Interest__r.Monitor_Assigned__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Photos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photo_Location_ID__c</fullName>
        <inlineHelpText>Location ID from ArcGIS</inlineHelpText>
        <label>Photo Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Thumbnail__c</fullName>
        <formula>IF(Attachment_ID__c!=null,HYPERLINK(&quot;/&quot;&amp;Id, IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Attachment_ID__c, &quot;Name&quot;,100,-100),&quot;_blank&quot;), &quot;&quot;)</formula>
        <label>Photo Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <formula>IF(Attachment_ID__c!=null,HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Attachment_ID__c,&quot;View Photo&quot;,&quot;target=_blank&quot;),&quot;&quot;)</formula>
        <label>Photo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IF(Attachment_ID__c!=null,HYPERLINK(&quot;/&quot;&amp;Id,  IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Attachment_ID__c, &quot;Name&quot;,500,-100),&quot;_blank&quot;), &quot;&quot;)</formula>
        <inlineHelpText>The photo image.</inlineHelpText>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_for_PDF__c</fullName>
        <formula>IF(Attachment_ID__c!=null,HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Attachment_ID__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Attachment_ID__c, &quot;Name&quot;,400,-100),&quot;_blank&quot;), &quot;&quot;)</formula>
        <inlineHelpText>This photo formula is the correct size for printing to PDF.</inlineHelpText>
        <label>Photo for PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photographer__c</fullName>
        <inlineHelpText>The full name of the person who actually took the photo.</inlineHelpText>
        <label>Photographer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property Interest</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Photos</relationshipLabel>
        <relationshipName>Photos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Management</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Photos</relationshipLabel>
        <relationshipName>Photos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Fields__c</fullName>
        <inlineHelpText>Populated with data from fields that aren&apos;t searchable so that the record will show up in global search (i.e. Property Management Unit Name, Property Interest Name, Monitoring Year, etc.)</inlineHelpText>
        <label>Search Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If this monitoring photo is for a specific subdivision, put that subdivision name or number here.</inlineHelpText>
        <label>Subdivision</label>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Photos</relationshipLabel>
        <relationshipName>Photos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Photo_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>For reports (sorting and vlookups in excel don&apos;t work with the 15 digit version)</inlineHelpText>
        <label>18-Digit Photo ID</label>
        <type>Text</type>
    </fields>
    <label>Photo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>File_Name_Link__c</columns>
        <columns>Date_Taken__c</columns>
        <columns>Photo_Thumbnail__c</columns>
        <columns>Monitoring_Report__c</columns>
        <columns>Description__c</columns>
        <columns>Location_Photo_Taken__c</columns>
        <columns>Photographer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Last_year_Photos</fullName>
        <columns>File_Name_Link__c</columns>
        <columns>Date_Taken__c</columns>
        <columns>Property_Interest__c</columns>
        <columns>Photo_Thumbnail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Photos__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date_Taken__c</field>
            <operation>lessThan</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Date_Taken__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_YEAR</value>
        </filters>
        <label>My Last Year Photos</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Photos</fullName>
        <columns>File_Name_Link__c</columns>
        <columns>Date_Taken__c</columns>
        <columns>Property_Interest__c</columns>
        <columns>Photo_Thumbnail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Photos__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Photos</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_This_year_Photos</fullName>
        <columns>File_Name_Link__c</columns>
        <columns>Date_Taken__c</columns>
        <columns>Property_Interest__c</columns>
        <columns>Photo_Thumbnail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Photos__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date_Taken__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>My This Year Photos</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IMG-{00000}</displayFormat>
        <label>Photo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Photos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>